Implements first version of the workflow api, missing step by id.
